test/fixtures/config/theming/error/badGulpVersion/.gulp.js
module.exports = {
  msgs: {
    error: {
      badGulpVersion: '{TIMESTAMP}BAD GULP VERSION {GulpVer:{1}}',
    },
  },
  theme: {
    GulpVer: '**{1}**',
  },
};
